--- a/notebook/sentence-bert.ipynb
+++ b/notebook/sentence-bert.ipynb
@@ -61,6 +61,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(768,)\n(768,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SentenceTransformer(\"../models/mlit/20200919\", device=\"cuda\")\n",
+    "embeddings = model.encode(sentences)\n",
+    "for embedding in embeddings:\n",
+    "    print(f\"{embedding.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
