--- a/notebook/sentence-bert.ipynb
+++ b/notebook/sentence-bert.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "import transformers\n",
-    "transformers.BertTokenizer = transformers.BertJapaneseTokenizer"
+    "# transformers.tokenization_bert.BertTokenizer = transformers.BertJapaneseTokenizer"
    ]
   },
   {
@@ -73,10 +73,86 @@
     }
    ],
    "source": [
-    "model = SentenceTransformer(\"../models/mlit/20200919\", device=\"cuda\")\n",
+    "model = SentenceTransformer(\"../models/mlit-large\", device=\"cuda\")\n",
     "embeddings = model.encode(sentences)\n",
     "for embedding in embeddings:\n",
     "    print(f\"{embedding.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[7184, 8542, 9, 6040, 12, 16071]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "model.tokenize(sentences[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['[CLS]',\n",
+       " '吾',\n",
+       " '輩',\n",
+       " 'は',\n",
+       " '猫',\n",
+       " 'で',\n",
+       " '##ある',\n",
+       " '[SEP]',\n",
+       " '[CLS]',\n",
+       " '本',\n",
+       " '日',\n",
+       " 'は',\n",
+       " '晴',\n",
+       " '天',\n",
+       " 'なり',\n",
+       " '[SEP]']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "encode_result = model.tokenizer(sentences, return_tensors=\"pt\", padding=True)\n",
+    "model.tokenizer.convert_ids_to_tokens(encode_result.input_ids.flatten().tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "transformers.tokenization_bert.BertTokenizer"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "type(model.tokenizer)"
    ]
   },
   {
