Update sentence bert example notebook

--- a/notebook/sentence-bert.ipynb
+++ b/notebook/sentence-bert.ipynb
@@ -25,10 +25,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'transformers.tokenization_bert_japanese.BertJapaneseTokenizer'>\n<class 'sentence_transformers.SentenceTransformer.SentenceTransformer'>\n"
+     ]
+    }
+   ],
    "source": [
-    "import transformers\n",
-    "# transformers.tokenization_bert.BertTokenizer = transformers.BertJapaneseTokenizer"
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sentence_transformers import models\n",
+    "\n",
+    "transformer = models.Transformer('cl-tohoku/bert-base-japanese-whole-word-masking')\n",
+    "pooling = models.Pooling(transformer.get_word_embedding_dimension(), pooling_mode_mean_tokens=True, pooling_mode_cls_token=False, pooling_mode_max_tokens=False)\n",
+    "model = SentenceTransformer(modules=[transformer, pooling])\n",
+    "\n",
+    "print(type(model.tokenizer))\n",
+    "print(type(model))"
    ]
   },
   {
@@ -45,13 +60,6 @@
     }
    ],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "from sentence_transformers import models\n",
-    "\n",
-    "transformer = models.BERT('cl-tohoku/bert-base-japanese-whole-word-masking')\n",
-    "pooling = models.Pooling(transformer.get_word_embedding_dimension(), pooling_mode_mean_tokens=True, pooling_mode_cls_token=False, pooling_mode_max_tokens=False)\n",
-    "model = SentenceTransformer(modules=[transformer, pooling])\n",
-    "\n",
     "sentences = ['吾輩は猫である',  '本日は晴天なり']\n",
     "embeddings = model.encode(sentences)\n",
     "\n",
@@ -73,7 +81,7 @@
     }
    ],
    "source": [
-    "model = SentenceTransformer(\"../models/mlit-large\", device=\"cuda\")\n",
+    "model = SentenceTransformer(\"../models/mlit-sample\", device=\"cuda\")\n",
     "embeddings = model.encode(sentences)\n",
     "for embedding in embeddings:\n",
     "    print(f\"{embedding.shape}\")"
